--- a/shaun-haldane-blog-initializr/src/main/resources/application.properties
+++ b/shaun-haldane-blog-initializr/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/test_db_2?useSSL=false
-spring.datasource.username= root
-spring.datasource.password= ShaunHaldane
+spring.datasource.url= jdbc:mysql://localhost:3306/shaunhaldaneblog?useSSL=false
+spring.datasource.username= 
+spring.datasource.password= 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
 # App Properties
